--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 	"repository": "git@github.com:Caxvalencia/Atlax.git",
 	"author": "Caxvalencia",
 	"dependencies": {
-		"express": "~3.2.4",
-		"socket.io": "~0.9.14"
+		"express": "~3.2.4"
 	}
 }
